# Reflow

./: .gitignore  CLAUDE.md  DECISIONS.md  DEPLOY.md  README.md  vercel.json
.github/workflows/: ci.yml
apps/web/: .env.example  WALKTHROUGH.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts
apps/web/e2e/: core-loop.auth.spec.ts  projects.auth.spec.ts  smoke.spec.ts
apps/web/e2e/fixtures/: auth.ts
apps/web/src/: middleware.ts  proxy.ts
apps/web/src/app/: DESIGN.md  globals.css  layout.tsx  manifest.ts  page.tsx  providers.tsx
apps/web/src/app/focus/: focus-client.tsx  page.tsx
apps/web/src/app/habits/: habits-client.tsx  page.tsx
apps/web/src/app/inbox/: edit-sheet.tsx  inbox-client.tsx  page.tsx
apps/web/src/app/journal/: journal-client.tsx  page.tsx
apps/web/src/app/login/: actions.ts  page.tsx
apps/web/src/lib/: projects.ts  recurrence.ts  types.ts
docs/research/: 2026-07-19-market-and-technical-research.md
plans/: reflow-completion-and-design.md
services/scheduler/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/scheduler/app/: main.py  models.py
services/scheduler/app/engine/: schedule.py
services/scheduler/app/llm/: goals.py  parse.py  patterns.py
services/scheduler/tests/: test_goals.py  test_intervals.py  test_parse.py  test_patterns.py  test_reflect.py  test_schedule.py
supabase/migrations/: 0001_core_schema.sql  0002_lock_down_trigger_functions.sql  0003_capture_and_parse_fields.sql  0004_calendar_sync.sql  0005_v2_task_model.sql  0006_drop_calendar_add_optional_tasks.sql
(+52 files in other folders)
